--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^1.1.0
   provider: ^6.0.5
   flutter_search_bar: 
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
